[tool.poetry]
name = "test-beam-scripts"
version = "0.1.0"
description = ""
authors = ["Antonello Pellecchia <antonello.pellecchia@cern.ch>"]

[tool.poetry.dependencies]
python = ">=3.7.1,<3.11"
PyYAML = "^6.0"
numpy = "^1.21.4"
pandas = "^1.3.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
